--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "core-js": "3.3.5",
     "eslint": "^6.7.2",
     "eslint-plugin-react": "^7.17.0",
+    "konva": "^4.0.18",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-konva": "^16.10.1-0",
     "react-scripts": "3.3.0"
   },
   "scripts": {
