--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-konva": "^16.10.1-0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "tone": "^13.8.32"
   },
   "scripts": {
     "start": "react-scripts start",
