--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eslint-plugin-react": "^7.17.0",
     "konva": "^4.0.18",
     "node-sass": "^4.13.0",
+    "qrcode": "^1.4.4",
+    "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-konva": "^16.10.1-0",
