--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "3.3.5",
     "eslint": "^6.7.2",
     "eslint-plugin-react": "^7.17.0",
+    "fontfaceobserver": "^2.1.0",
     "konva": "^4.0.18",
     "node-sass": "^4.13.0",
     "qrcode": "^1.4.4",
